# wise-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  python-app-test.yml  python-package.yml
tests/: test_base_client.py
